--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-web": "^0.17.0"
+    "react-native-web": "^0.17.0",
+    "expo-constants": "~10.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
